--- a/references.bib
+++ b/references.bib
@@ -1,162 +1,319 @@
-
-@article{amrhein_scientists_2019,
-	title = {Scientists rise up against statistical significance},
-	volume = {567},
-	copyright = {2021 Nature},
-	url = {https://www.nature.com/articles/d41586-019-00857-9},
-	doi = {10.1038/d41586-019-00857-9},
-	abstract = {Valentin Amrhein, Sander Greenland, Blake McShane and more than 800 signatories call for an end to hyped claims and the dismissal of possibly crucial effects.},
-	language = {en},
-	number = {7748},
-	urldate = {2022-10-05},
-	journal = {Nature},
-	author = {Amrhein, Valentin and Greenland, Sander and McShane, Blake},
-	month = mar,
-	year = {2019},
-	note = {Bandiera\_abtest: a
-Cg\_type: Comment
-Number: 7748
-Publisher: Nature Publishing Group
-Subject\_term: Research data, Research management},
-	keywords = {Research data, Research management},
-	pages = {305--307},
-	file = {Full Text PDF:C\:\\Users\\james\\Zotero\\storage\\6H2GHXJ9\\Amrhein et al. - 2019 - Scientists rise up against statistical significanc.pdf:application/pdf;Snapshot:C\:\\Users\\james\\Zotero\\storage\\GPSJZBM6\\d41586-019-00857-9.html:text/html},
+@article{amrheinInferentialStatisticsDescriptive2019a,
+  type = {Journal Article},
+  title = {Inferential Statistics as Descriptive Statistics: {{There}} Is No Replication Crisis If We Don't Expect Replication},
+  author = {Amrhein, Valentin and Trafimow, David and Greenland, Sander},
+  year = {2019},
+  journal = {The American Statistician},
+  volume = {73},
+  number = {sup1},
+  pages = {262--270},
+  issn = {0003-1305}
 }
 
-@article{amrhein_inferential_2019,
-	title = {Inferential {Statistics} as {Descriptive} {Statistics}: {There} {Is} {No} {Replication} {Crisis} if {We} {Don}’t {Expect} {Replication}},
-	volume = {73},
-	issn = {0003-1305},
-	shorttitle = {Inferential {Statistics} as {Descriptive} {Statistics}},
-	url = {https://doi.org/10.1080/00031305.2018.1543137},
-	doi = {10.1080/00031305.2018.1543137},
-	abstract = {Statistical inference often fails to replicate. One reason is that many results may be selected for drawing inference because some threshold of a statistic like the P-value was crossed, leading to biased reported effect sizes. Nonetheless, considerable non-replication is to be expected even without selective reporting, and generalizations from single studies are rarely if ever warranted. Honestly reported results must vary from replication to replication because of varying assumption violations and random variation; excessive agreement itself would suggest deeper problems, such as failure to publish results in conflict with group expectations or desires. A general perception of a “replication crisis” may thus reflect failure to recognize that statistical tests not only test hypotheses, but countless assumptions and the entire environment in which research takes place. Because of all the uncertain and unknown assumptions that underpin statistical inferences, we should treat inferential statistics as highly unstable local descriptions of relations between assumptions and data, rather than as providing generalizable inferences about hypotheses or models. And that means we should treat statistical results as being much more incomplete and uncertain than is currently the norm. Acknowledging this uncertainty could help reduce the allure of selective reporting: Since a small P-value could be large in a replication study, and a large P-value could be small, there is simply no need to selectively report studies based on statistical results. Rather than focusing our study reports on uncertain conclusions, we should thus focus on describing accurately how the study was conducted, what problems occurred, what data were obtained, what analysis methods were used and why, and what output those methods produced.},
-	number = {sup1},
-	urldate = {2022-10-05},
-	journal = {The American Statistician},
-	author = {Amrhein, Valentin and Trafimow, David and Greenland, Sander},
-	month = mar,
-	year = {2019},
-	note = {Publisher: Taylor \& Francis
-\_eprint: https://doi.org/10.1080/00031305.2018.1543137},
-	keywords = {Auxiliary hypotheses, Confidence interval, Hypothesis test, P-value, Posterior probability, Replication, Selective reporting, Significance test, Statistical model, Unreplicable research},
-	pages = {262--270},
-	file = {Full Text PDF:C\:\\Users\\james\\Zotero\\storage\\GPJHZUMZ\\Amrhein et al. - 2019 - Inferential Statistics as Descriptive Statistics .pdf:application/pdf},
+@article{amrheinScientistsRiseStatistical2019b,
+  type = {Journal Article},
+  title = {Scientists Rise up against Statistical Significance},
+  author = {Amrhein, Valentin and Greenland, Sander and McShane, Blake},
+  year = {2019},
+  journal = {Nature},
+  volume = {567},
+  number = {7748},
+  pages = {305--307},
+  issn = {0028-0836}
 }
 
-@article{mcshane_abandon_2019,
-	title = {Abandon {Statistical} {Significance}},
-	volume = {73},
-	issn = {0003-1305},
-	url = {https://doi.org/10.1080/00031305.2018.1527253},
-	doi = {10.1080/00031305.2018.1527253},
-	abstract = {We discuss problems the null hypothesis significance testing (NHST) paradigm poses for replication and more broadly in the biomedical and social sciences as well as how these problems remain unresolved by proposals involving modified p-value thresholds, confidence intervals, and Bayes factors. We then discuss our own proposal, which is to abandon statistical significance. We recommend dropping the NHST paradigm—and the p-value thresholds intrinsic to it—as the default statistical paradigm for research, publication, and discovery in the biomedical and social sciences. Specifically, we propose that the p-value be demoted from its threshold screening role and instead, treated continuously, be considered along with currently subordinate factors (e.g., related prior evidence, plausibility of mechanism, study design and data quality, real world costs and benefits, novelty of finding, and other factors that vary by research domain) as just one among many pieces of evidence. We have no desire to “ban” p-values or other purely statistical measures. Rather, we believe that such measures should not be thresholded and that, thresholded or not, they should not take priority over the currently subordinate factors. We also argue that it seldom makes sense to calibrate evidence as a function of p-values or other purely statistical measures. We offer recommendations for how our proposal can be implemented in the scientific publication process as well as in statistical decision making more broadly.},
-	number = {sup1},
-	urldate = {2022-10-05},
-	journal = {The American Statistician},
-	author = {McShane, Blakeley B. and Gal, David and Gelman, Andrew and Robert, Christian and Tackett, Jennifer L.},
-	month = mar,
-	year = {2019},
-	note = {Publisher: Taylor \& Francis
-\_eprint: https://doi.org/10.1080/00031305.2018.1527253},
-	keywords = {Null hypothesis significance testing, p-Value, Replication, Sociology of science, Statistical significance},
-	pages = {235--245},
-	file = {Full Text PDF:C\:\\Users\\james\\Zotero\\storage\\MFCQLH52\\McShane et al. - 2019 - Abandon Statistical Significance.pdf:application/pdf},
+@article{bakatchinaEffectRepeatedOnfield2023,
+  type = {Journal Article},
+  title = {Effect of Repeated, on-Field Sprints on Kinematic Variables in Wheelchair Rugby Players},
+  author = {Bakatchina, Sadate and Brassart, Florian and Dosseh, Kossivi and Weissland, Thierry and Pradon, Didier and Faupin, Arnaud},
+  year = {2023},
+  journal = {American Journal of Physical Medicine \& Rehabilitation},
+  pages = {10.1097},
+  issn = {0894-9115}
 }
 
-@article{cumming_new_2014,
-	title = {The {New} {Statistics}: {Why} and {How}},
-	volume = {25},
-	issn = {0956-7976},
-	shorttitle = {The {New} {Statistics}},
-	url = {https://doi.org/10.1177/0956797613504966},
-	doi = {10.1177/0956797613504966},
-	abstract = {We need to make substantial changes to how we conduct research. First, in response to heightened concern that our published research literature is incomplete and untrustworthy, we need new requirements to ensure research integrity. These include prespecification of studies whenever possible, avoidance of selection and other inappropriate data-analytic practices, complete reporting, and encouragement of replication. Second, in response to renewed recognition of the severe flaws of null-hypothesis significance testing (NHST), we need to shift from reliance on NHST to estimation and other preferred techniques. The new statistics refers to recommended practices, including estimation based on effect sizes, confidence intervals, and meta-analysis. The techniques are not new, but adopting them widely would be new for many researchers, as well as highly beneficial. This article explains why the new statistics are important and offers guidance for their use. It describes an eight-step new-statistics strategy for research with integrity, which starts with formulation of research questions in estimation terms, has no place for NHST, and is aimed at building a cumulative quantitative discipline.},
-	language = {en},
-	number = {1},
-	urldate = {2022-10-05},
-	journal = {Psychological Science},
-	author = {Cumming, Geoff},
-	month = jan,
-	year = {2014},
-	note = {Publisher: SAGE Publications Inc},
-	pages = {7--29},
-	file = {SAGE PDF Full Text:C\:\\Users\\james\\Zotero\\storage\\V346TNH8\\Cumming - 2014 - The New Statistics Why and How.pdf:application/pdf},
+@article{bakatchinaPerformanceAsymmetryBiomechanical2021,
+  type = {Journal Article},
+  title = {Performance, Asymmetry and Biomechanical Parameters in Wheelchair Rugby Players},
+  author = {Bakatchina, Sadate and Weissland, Thierry and Astier, Marjolaine and Pradon, Didier and Faupin, Arnaud},
+  year = {2021},
+  journal = {Sports Biomechanics},
+  pages = {1--14},
+  issn = {1476-3141}
 }
 
-@article{kruschke_bayesian_2018,
-	title = {The {Bayesian} {New} {Statistics}: {Hypothesis} testing, estimation, meta-analysis, and power analysis from a {Bayesian} perspective},
-	volume = {25},
-	issn = {1531-5320},
-	shorttitle = {The {Bayesian} {New} {Statistics}},
-	url = {https://doi.org/10.3758/s13423-016-1221-4},
-	doi = {10.3758/s13423-016-1221-4},
-	abstract = {In the practice of data analysis, there is a conceptual distinction between hypothesis testing, on the one hand, and estimation with quantified uncertainty on the other. Among frequentists in psychology, a shift of emphasis from hypothesis testing to estimation has been dubbed “the New Statistics” (Cumming 2014). A second conceptual distinction is between frequentist methods and Bayesian methods. Our main goal in this article is to explain how Bayesian methods achieve the goals of the New Statistics better than frequentist methods. The article reviews frequentist and Bayesian approaches to hypothesis testing and to estimation with confidence or credible intervals. The article also describes Bayesian approaches to meta-analysis, randomized controlled trials, and power analysis.},
-	language = {en},
-	number = {1},
-	urldate = {2022-10-05},
-	journal = {Psychonomic Bulletin \& Review},
-	author = {Kruschke, John K. and Liddell, Torrin M.},
-	month = feb,
-	year = {2018},
-	keywords = {Bayes factor, Bayesian inference, Confidence interval, Credible interval, Effect size, Equivalence testing, Highest density interval, Meta-analysis, Null hypothesis significance testing, Power analysis, Randomized controlled trial, Region of practical equivalence},
-	pages = {178--206},
-	file = {Full Text PDF:C\:\\Users\\james\\Zotero\\storage\\ZC6EX7YU\\Kruschke and Liddell - 2018 - The Bayesian New Statistics Hypothesis testing, e.pdf:application/pdf},
+@article{brileyWheelchairRugbyPlayers2023,
+  type = {Journal Article},
+  title = {Wheelchair Rugby Players Maintain Sprint Performance but Alter Propulsion Biomechanics after Simulated Match Play},
+  author = {Briley, Simon J and O'Brien, Thomas J and Oh, Yim-Taek and Vegter, Riemer JK and Chan, Mui and Mason, Barry S and Goosey-Tolfrey, Victoria L},
+  year = {2023},
+  journal = {Scandinavian Journal of Medicine \& Science in Sports},
+  issn = {0905-7188}
 }
 
-@misc{wickham_ggplot2_2022,
-	title = {ggplot2: {Create} {Elegant} {Data} {Visualisations} {Using} the {Grammar} of {Graphics}},
-	copyright = {MIT + file LICENSE},
-	shorttitle = {ggplot2},
-	url = {https://CRAN.R-project.org/package=ggplot2},
-	abstract = {A system for 'declaratively' creating graphics, based on "The Grammar of Graphics". You provide the data, tell 'ggplot2' how to map variables to aesthetics, what graphical primitives to use, and it takes care of the details.},
-	urldate = {2022-10-05},
-	author = {Wickham, Hadley and Chang, Winston and Henry, Lionel and Pedersen, Thomas Lin and Takahashi, Kohske and Wilke, Claus and Woo, Kara and Yutani, Hiroaki and Dunnington, Dewey and RStudio},
-	month = may,
-	year = {2022},
-	keywords = {Spatial, TeachingStatistics},
+@article{burknerBrmsPackageBayesian2017a,
+  type = {Journal Article},
+  title = {Brms: {{An R}} Package for {{Bayesian}} Multilevel Models Using {{Stan}}},
+  author = {B{\"u}rkner, Paul-Christian},
+  year = {2017},
+  journal = {Journal of Statistical Software},
+  volume = {80},
+  pages = {1--28},
+  issn = {1548-7660}
 }
 
-@misc{pedersen_patchwork_2022,
-	title = {patchwork: {The} {Composer} of {Plots}},
-	copyright = {MIT + file LICENSE},
-	shorttitle = {patchwork},
-	url = {https://CRAN.R-project.org/package=patchwork},
-	abstract = {The 'ggplot2' package provides a strong API for sequentially building up a plot, but does not concern itself with composition of multiple plots. 'patchwork' is a package that expands the API to allow for arbitrarily complex composition of plots by, among others, providing mathematical operators for combining multiple plots. Other packages that try to address this need (but with a different approach) are 'gridExtra' and 'cowplot'.},
-	urldate = {2022-10-05},
-	author = {Pedersen, Thomas Lin},
-	month = aug,
-	year = {2022},
+@article{chuaWheelchairRugbyFast2010,
+  type = {Journal Article},
+  title = {Wheelchair Rugby: {{Fast}} Activity and Performance Analysis},
+  author = {Chua, Julian JC and Fuss, Franz Konstantin and Kulish, Vladimir V and Subic, Aleksandar},
+  year = {2010},
+  journal = {Procedia Engineering},
+  volume = {2},
+  number = {2},
+  pages = {3077--3082},
+  issn = {1877-7058}
 }
 
-@misc{kay_tidybayes_2022,
-	title = {tidybayes: {Tidy} {Data} and '{Geoms}' for {Bayesian} {Models}},
-	copyright = {GPL (≥ 3)},
-	shorttitle = {tidybayes},
-	url = {https://CRAN.R-project.org/package=tidybayes},
-	abstract = {Compose data for and extract, manipulate, and visualize posterior draws from Bayesian models ('JAGS', 'Stan', 'rstanarm', 'brms', 'MCMCglmm', 'coda', ...) in a tidy data format. Functions are provided to help extract tidy data frames of draws from Bayesian models and that generate point summaries and intervals in a tidy format. In addition, 'ggplot2' 'geoms' and 'stats' are provided for common visualization primitives like points with multiple uncertainty intervals, eye plots (intervals plus densities), and fit curves with multiple, arbitrary uncertainty bands.},
-	urldate = {2022-10-05},
-	author = {Kay, Matthew and Mastny, Timothy},
-	month = jan,
-	year = {2022},
+@article{cummingNewStatisticsWhy2014a,
+  type = {Journal Article},
+  title = {The New Statistics: {{Why}} and How},
+  author = {Cumming, Geoff},
+  year = {2014},
+  journal = {Psychological Science},
+  volume = {25},
+  number = {1},
+  pages = {7--29},
+  issn = {0956-7976}
 }
 
-@article{burkner_brms_2017,
-	title = {brms: {An} {R} {Package} for {Bayesian} {Multilevel} {Models} {Using} {Stan}},
-	volume = {80},
-	copyright = {Copyright (c) 2017 Paul-Christian Bürkner},
-	issn = {1548-7660},
-	shorttitle = {brms},
-	url = {https://doi.org/10.18637/jss.v080.i01},
-	doi = {10.18637/jss.v080.i01},
-	abstract = {The brms package implements Bayesian multilevel models in R using the probabilistic programming language Stan. A wide range of distributions and link functions are supported, allowing users to fit  -  among others  -  linear, robust linear, binomial, Poisson, survival, ordinal, zero-inflated, hurdle, and even non-linear models all in a multilevel context. Further modeling options include autocorrelation of the response variable, user defined covariance structures, censored data, as well as meta-analytic standard errors. Prior specifications are flexible and explicitly encourage users to apply prior distributions that actually reflect their beliefs. In addition, model fit can easily be assessed and compared with the Watanabe-Akaike information criterion and leave-one-out cross-validation.},
-	language = {en},
-	urldate = {2023-07-27},
-	journal = {Journal of Statistical Software},
-	author = {Bürkner, Paul-Christian},
-	month = aug,
-	year = {2017},
-	keywords = {Bayesian inference, MCMC, multilevel model, ordinal data, R, Stan},
-	pages = {1--28},
-	file = {Full Text:C\:\\Users\\james\\Zotero\\storage\\JLWNDQQH\\Bürkner - 2017 - brms An R Package for Bayesian Multilevel Models .pdf:application/pdf},
+@article{garcia-fresnedaInitialMaximumPushrim2019,
+  type = {Journal Article},
+  title = {Initial Maximum Push-Rim Propulsion and Sprint Performance in Elite Wheelchair Rugby Players},
+  author = {{Garc{\'i}a-Fresneda}, Adrian and Carmona, Gerard and Padull{\'e}s, Xabier and Nuell, Sergi and Padull{\'e}s, Josep M and Cadefau, Joan A and Iturricastillo, Aitor},
+  year = {2019},
+  journal = {The Journal of Strength \& Conditioning Research},
+  volume = {33},
+  number = {3},
+  pages = {857--865},
+  issn = {1064-8011}
+}
+
+@misc{gbwrWheelchairRugbyFives2023,
+  type = {Web Page},
+  title = {Wheelchair Rugby Fives},
+  author = {GBWR, Great Britain Wheelchair Rugby},
+  year = {2023},
+  number = {5th November 2023},
+  publisher = {{GBWR}}
+}
+
+@article{gee2020Repeated2018,
+  type = {Journal Article},
+  title = {A 20{\texttimes} 20 m Repeated Sprint Field Test Replicates the Demands of Wheelchair Rugby},
+  author = {Gee, Cameron M and Lacroix, Melissa A and West, Christopher R},
+  year = {2018},
+  journal = {Journal of Science and Medicine in Sport},
+  volume = {21},
+  number = {7},
+  pages = {753--757},
+  issn = {1440-2440}
+}
+
+@article{goosey-tolfreyAerobicCapacityPeak2006,
+  type = {Journal Article},
+  title = {Aerobic Capacity and Peak Power Output of Elite Quadriplegic Games Players},
+  author = {{Goosey-Tolfrey}, V and Castle, P and Webborn, N},
+  year = {2006},
+  journal = {British Journal of Sports Medicine},
+  volume = {40},
+  number = {8},
+  pages = {684--687},
+  issn = {0306-3674}
+}
+
+@article{goosey-tolfreyFieldbasedPhysiologicalTesting2013,
+  type = {Journal Article},
+  title = {Field-Based Physiological Testing of Wheelchair Athletes},
+  author = {{Goosey-Tolfrey}, Victoria L and Leicht, Christof A},
+  year = {2013},
+  journal = {Sports Medicine},
+  volume = {43},
+  pages = {77--91},
+  issn = {0112-1642}
+}
+
+@article{goosey-tolfreyPhysiologyWheelchairSport2010,
+  type = {Journal Article},
+  title = {Physiology of Wheelchair Sport},
+  author = {{Goosey-Tolfrey}, Vicky and Price, Mike},
+  year = {2010},
+  journal = {Wheelchair sport: A complete guide for athletes, coaches and teachers},
+  pages = {47--62}
+}
+
+@article{goosey-tolfreySprintPerformancePropulsion2018,
+  type = {Journal Article},
+  title = {Sprint Performance and Propulsion Asymmetries on an Ergometer in Trained High-and Low-point Wheelchair Rugby Players},
+  author = {Goosey-Tolfrey, Victoria L and Vegter, Riemer JK and Mason, Barry S and Paulson, Thomas AW and Lenton, John P and Van Der Scheer, Jan W and {van der Woude}, Lucas HV},
+  year = {2018},
+  journal = {Scandinavian Journal of Medicine \& Science in Sports},
+  volume = {28},
+  number = {5},
+  pages = {1586--1593},
+  issn = {0905-7188}
+}
+
+@article{haydonOvergroundpropulsionKinematicsAcceleration2018,
+  type = {Journal Article},
+  title = {Overground-Propulsion Kinematics and Acceleration in Elite Wheelchair Rugby},
+  author = {Haydon, David S and Pinder, Ross A and Grimshaw, Paul N and Robertson, William SP},
+  year = {2018},
+  journal = {International Journal of Sports Physiology \& Performance},
+  volume = {13},
+  number = {2},
+  issn = {1555-0265}
+}
+
+@article{hopkinsSpreadsheetsAnalysisValidity2017,
+  type = {Journal Article},
+  title = {Spreadsheets for Analysis of Validity and Reliability},
+  author = {Hopkins, Will G},
+  year = {2017},
+  journal = {Sportscience},
+  volume = {21},
+  issn = {1174-9210}
+}
+
+@article{janssenForceVelocityProfiling2023,
+  type = {Journal Article},
+  title = {Force{\textendash}Velocity Profiling of Elite Wheelchair Rugby Players by Manipulating Rolling Resistance over Multiple Wheelchair Sprints},
+  author = {Janssen, Rowie JF and {de Groot}, Sonja and {Van der Woude}, Lucas HV and Houdijk, Han and Goosey-Tolfrey, Vicky L and Vegter, Riemer JK},
+  year = {2023},
+  journal = {Scandinavian Journal of Medicine \& Science in Sports},
+  issn = {0905-7188}
+}
+
+@misc{kayTidybayesTidyData2022,
+  type = {Web Page},
+  title = {Tidybayes: {{Tidy}} Data and Geoms for {{Bayesian}} Models},
+  author = {Kay, Matthew; Mastny, T},
+  year = {2022}
+}
+
+@article{kruschkeBayesianNewStatistics2018a,
+  type = {Journal Article},
+  title = {The {{Bayesian New Statistics}}: {{Hypothesis}} Testing, Estimation, Meta-Analysis, and Power Analysis from a {{Bayesian}} Perspective},
+  author = {Kruschke, John K and Liddell, Torrin M},
+  year = {2018},
+  journal = {Psychonomic Bulletin \& Review},
+  volume = {25},
+  pages = {178--206},
+  issn = {1069-9384}
+}
+
+@article{mcshaneAbandonStatisticalSignificance2019a,
+  type = {Journal Article},
+  title = {Abandon Statistical Significance},
+  author = {McShane, Blakeley B and Gal, David and Gelman, Andrew and Robert, Christian and Tackett, Jennifer L},
+  year = {2019},
+  journal = {The American Statistician},
+  volume = {73},
+  number = {sup1},
+  pages = {235--245},
+  issn = {0003-1305}
+}
+
+@misc{pedersenPatchworkComposerPlots2022a,
+  type = {Web Page},
+  title = {Patchwork: {{The}} Composer of Plots},
+  author = {Pedersen, Thomas Lin},
+  year = {2022}
+}
+
+@article{rhodesActivityProfilesElite2015,
+  type = {Journal Article},
+  title = {Activity Profiles of Elite Wheelchair Rugby Players during Competition},
+  author = {Rhodes, James M and Mason, Barry S and Perrat, Bertrand and Smith, Martin J and Malone, Laurie A and {Goosey-Tolfrey}, Victoria L},
+  year = {2015},
+  journal = {International Journal of Sports Physiology and Performance},
+  volume = {10},
+  number = {3},
+  pages = {318--324},
+  issn = {1555-0273}
+}
+
+@article{rhodesComparisonSpeedProfiles2017,
+  type = {Journal Article},
+  title = {A Comparison of Speed Profiles during Training and Competition in Elite Wheelchair Rugby Players},
+  author = {Rhodes, James M and Mason, Barry S and Paulson, Thomas AW and {Goosey-Tolfrey}, Victoria L},
+  year = {2017},
+  journal = {International Journal of Sports Physiology and Performance},
+  volume = {12},
+  number = {6},
+  pages = {777--782},
+  issn = {1555-0273}
+}
+
+@article{rhodesEffectTeamRank2015,
+  type = {Journal Article},
+  title = {Effect of Team Rank and Player Classification on Activity Profiles of Elite Wheelchair Rugby Players},
+  author = {Rhodes, James M and Mason, Barry S and Malone, Laurie A and {Goosey-Tolfrey}, Victoria L},
+  year = {2015},
+  journal = {Journal of Sports Sciences},
+  volume = {33},
+  number = {19},
+  pages = {2070--2078},
+  issn = {0264-0414}
+}
+
+@article{tweedyInternationalParalympicCommittee2011,
+  type = {Journal Article},
+  title = {International {{Paralympic Committee}} Position Stand{\textemdash}Background and Scientific Principles of Classification in {{Paralympic}} Sport},
+  author = {Tweedy, Sean M and Vanlandewijck, Yves C},
+  year = {2011},
+  journal = {British Journal of Sports Medicine},
+  volume = {45},
+  number = {4},
+  pages = {259--269},
+  issn = {0306-3674}
+}
+
+@article{vanlandewijckEvidencebasedClassificationWheelchair2011,
+  type = {Journal Article},
+  title = {Towards Evidence-Based Classification in Wheelchair Sports: {{Impact}} of Seating Position on Wheelchair Acceleration},
+  author = {Vanlandewijck, Yves C and Verellen, Joeri and Tweedy, Sean},
+  year = {2011},
+  journal = {Journal of Sports Sciences},
+  volume = {29},
+  number = {10},
+  pages = {1089--1096},
+  issn = {0264-0414}
+}
+
+@article{westEffectsAbdominalBinding2014,
+  type = {Journal Article},
+  title = {Effects of Abdominal Binding on Field-Based Exercise Responses in {{Paralympic}} Athletes with Cervical Spinal Cord Injury},
+  author = {West, Christopher R and Campbell, Ian G and {Goosey-Tolfrey}, Victoria L and Mason, Barry S and Romer, Lee M},
+  year = {2014},
+  journal = {Journal of Science and Medicine in Sport},
+  volume = {17},
+  number = {4},
+  pages = {351--355},
+  issn = {1440-2440}
+}
+
+@misc{wickhamGgplot2CreateElegant2022a,
+  type = {Generic},
+  title = {Ggplot2: {{Create}} Elegant Data Visualisations Using the Grammar of Graphics.},
+  author = {Wickham, H and Chang, W and Henry, L and Pedersen, {\relax TL} and Takahashi, K and Wilke, C and Woo, K and Yutani, H and Dunnington, D},
+  year = {2022}
+}
+
+@misc{wwrSport2023,
+  type = {Web Page},
+  title = {About the Sport},
+  author = {WWR, World Wheelchair Rugby},
+  year = {2023},
+  number = {5th November 2023},
+  publisher = {{WWR}}
 }
