--- a/pre_print.qmd
+++ b/pre_print.qmd
@@ -28,7 +28,7 @@ affiliations:
    - id: 1
      name: Department of Sport and Health, Solent University, UK
 abstract: |
- Wheelchair rugby (WCR) is an indoor contact sport. The sport is commonly known for its paralympic discipline, WCR Fours. A more inclusive version of the sport, WCR Fives, was developed recently. Previously, it has been reported that sprint and repeated sprint (RS) ability are crucial for success in WCR. However, very little is known about the differences in these qualities between those playing WCR Fours and Fives, or between those with a spinal cord injury (SCI) and those without in recreational WCR players. However, very little is known about the differences in these qualities between those playing WCR Fours and Fives, or between those with a spinal cord injury (SCI) and those without, in recreational WCR players. Therefore, this study aimed to address these gaps in a non-elite sample of athletes. A total of 21 (17 males and four females) players (mean ± SD; age: 34.66 ± 12.34 years; mass: 76.23 ± 21.96 kg; stature: 1.76 ± 0.09 m) participated. This study measured velocity ($m·s^{-1}$) and acceleration ($m·s^{-2}$) with splits at 5, 10, 15, and 20m during three maximal 20m sprint efforts and timing splits during 10 x 20m RSs. Fours and Fives showed similar velocities and accelerations across all distances during the initial sprints. SCI participants had slower velocities and lower acceleration across all distances. However, there were interactions between disability and distance where although SCI participants had lower accelerations over the initial 0-5m distance, the difference decreased as the distance covered increased. During the RSs, similar performances across all distances and all sprint numbers were observed for Fours and Fives and SCI and non-SCI players. In conclusion, there appears to be little difference between Fours and Fives sprint and RS ability.
+ Wheelchair rugby (WCR) is an indoor contact sport. The sport is commonly known for its paralympic discipline, WCR Fours. A more inclusive version of the sport, WCR Fives, was developed recently. Previously, it has been reported that sprint and repeated sprint (RS) ability are crucial for success in WCR. However, very little is known about the differences in these qualities between those playing WCR Fours and Fives, or between those with a spinal cord injury (SCI) and those without, in recreational WCR players. Therefore, this study aimed to address these gaps in a non-elite sample of athletes. A total of 21 (17 males and four females) players (mean ± SD; age: 34.66 ± 12.34 years; mass: 76.23 ± 21.96 kg; stature: 1.76 ± 0.09 m) participated. This study measured velocity ($m·s^{-1}$) and acceleration ($m·s^{-2}$) with splits at 5, 10, 15, and 20m during three maximal 20m sprint efforts and timing splits during 10 x 20m RSs. Fours and Fives showed similar velocities and accelerations across all distances during the initial sprints. SCI participants had slower velocities and lower acceleration across all distances. However, there were interactions between disability and distance where although SCI participants had lower accelerations over the initial 0-5m distance, the difference decreased as the distance covered increased. During the RSs, similar performances across all distances and all sprint numbers were observed for Fours and Fives and SCI and non-SCI players. In conclusion, there appears to be little difference between Fours and Fives sprint and RS ability.
 license-type: ccby # change if neccessary
 # year: 2025 # defaults to current year
 # keywords: [psychological intervention, cumulative evidence, research waste] # optional
